--- a/app/views/layouts/embedded_app.html.erb
+++ b/app/views/layouts/embedded_app.html.erb
@@ -9,7 +9,7 @@
     <%= csrf_meta_tags %>
   </head>
 
-  <body>
+  <body class="fresh-ui">
     <div class="app-wrapper">
       <div class="app-content">
         <main role="main">
