--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -335,9 +335,13 @@ div.pickup-count {
 }
 .bundle-input {
   display: inline-flex;
-  max-width: 297px;
+  /*max-width: 297px;*/
+  width: 100%;
   align-items: flex-end;
   padding: 5px;
+}
+.bundle-input div:first-child {
+  width: 100%;
 }
 .bundle-input .quantity .Polaris-TextField {
   width: 80px;
