--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -9,9 +9,11 @@
         forceRedirect: true,
         shop_session: @shop_session,
         orders: @orders,
+        errorOrders: @errorOrders,
         shop: @shop,
         bundles: @bundles,
         fiveDayOrders: @fiveDayOrders,
+        shippingOrders: @shippingOrders,
         shippingOrdersCount: @shippingOrdersCount,
         shippingOrdersRevenue: @shippingOrdersRevenue,
         productCount: @productCount,
