--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -400,7 +400,7 @@ div.pickup-count {
 .bamboo-orderList .Polaris-ResourceList__Container {
   pointer-events: auto;
 }
-.table-wrapper .Polaris-Icon:not(.Polaris-Checkbox__Icon .Polaris-Icon) {
+.table-wrapper .notice-icon {
   display: inline-block;
   width: 16px;
   vertical-align: middle;
