finished up changes to benefits and ingredients metafield editor, converted bundle editor to similar structure, moved both to settings, had to update navigation. Gave both Search functionality.

--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -358,7 +358,7 @@ div.pickup-count {
   align-items: flex-end;
   padding: 5px;
 }
-.bundle-input div:first-child {
+.bundle-input .Polaris-Stack {
   width: 100%;
 }
 .bundle-input .quantity .Polaris-TextField {
@@ -391,6 +391,10 @@ div.pickup-count {
 .postalCodes .Polaris-Tag {
   min-width: 100px;
   justify-content: space-between;
+}
+
+.modal-form-container {
+  min-height: 400px;
 }
 
 /* Annotated Sections */
