bamboo big update post production. Some memory enchancements, new rate, etc.

--- a/app/views/dashboard/index.html.erb
+++ b/app/views/dashboard/index.html.erb
@@ -8,10 +8,8 @@
         debug: Rails.env.development? ? 'true' : 'false',
         forceRedirect: true,
         shop_session: @shop_session,
-        orders: @orders,
-        errorOrders: @errorOrders,
+        errorOrdersCount: @errorOrdersCount,
         shop: @shop,
-        bundles: @bundles,
         fiveDayOrders: @fiveDayOrders,
         shippingOrders: @shippingOrders,
         shippingOrdersCount: @shippingOrdersCount,
