--- a/app/assets/stylesheets/application.css
+++ b/app/assets/stylesheets/application.css
@@ -128,6 +128,11 @@ div.Polaris-Page {
     display: block;
 }
 
+.scroll-shadow--top-and-bottom {
+  -webkit-box-shadow: inset 0px -20px 20px -20px rgba(0,0,0,0.1), inset 0px 20px 20px -20px rgba(0,0,0,0.1);
+  box-shadow: inset 0px -20px 20px -20px rgba(0,0,0,0.1), inset 0px 20px 20px -20px rgba(0,0,0,0.1);
+}
+
 /* Navigation */
 .Navigation__Bamboo {
   background: #f4f6f8;
@@ -509,7 +514,9 @@ div.pickup-count {
 }
 
 .modal-form-container {
-  min-height: 400px;
+  min-height: 300px;
+  max-height: 60vh;
+  overflow: scroll;
 }
 
 /* Annotated Sections */
