app proxy picker bug where day before no cooks shouldn't matter to same day rates. Also added a redirect to order recharge admin link if non subscription.

--- a/app/views/orders/redirect_to_recharge_address.html.erb
+++ b/app/views/orders/redirect_to_recharge_address.html.erb
@@ -1,2 +1,2 @@
-redirecting to recharge...
-<%= javascript_tag("window.top.location='#{@rechargeUrl}'") %>
+<%= @redirect_text %>
+<%= javascript_tag("window.top.location.href='#{@redirect_url}'") %>
