optimizations using pluck, and address csv no longer cares about fulfillments, and subscription list shows icon with blackout_date.

--- a/app/views/subscription/index.html.erb
+++ b/app/views/subscription/index.html.erb
@@ -9,5 +9,6 @@
         forceRedirect: true,
         shop_session: @shop_session,
         shop: @shop,
+        blackoutDates: @blackout_dates,
         subscriptions: @rechargeSubscriptions,
         }, prerender: false) %>
